# mcp-analyzer

./: dvmcp.json  package-lock.json  package.json  pyproject.toml  scan.py  scan_results.json  test.json  test_auth_server.py  test_oauth.py  tools_dump_stdio.py
examples/: example_config.json
mcp_analyzer/: __init__.py  auth.py  classify.py  config.py  constants.py  enhanced_payload_generator.py  findings.py  llm_fuzzer.py  mcp_client.py  mcp_client.py.bak  probes.py  report.py  rpc.py  server.py  static_payload_generator.py  tools.py  universal_scanner.py  utils.py
mcp_analyzer/adapters/: __init__.py  base.py  factory.py  mcp_adapter.py  sse_adapter.py
tests/: enhanced_oauth_server.py  mcp_oauth_server.py  simple_tools_server.py  sse_server.py  test_classify.py  test_config.py  test_probes.py  tools_list.json
